--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.16",
-    "momentjs": "~2.6.0"
+    "momentjs": "~2.6.0",
+    "socket.io-client": "~0.9.16",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {}
 }
